{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 491,
  "lineage": "58b426e5-da56-a33d-4be1-ca6cded7225e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gru_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b1aad41eb71762f",
            "arn": "arn:aws:ec2:sa-east-1:891377135193:elastic-ip/eipalloc-04b1aad41eb71762f",
            "domain": "vpc",
            "id": "eipalloc-04b1aad41eb71762f",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-18-229-97-70.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.97.70",
            "public_ipv4_pool": "amazon",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-nat-eip01"
            },
            "tags_all": {
              "Name": "gro-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gru_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f85876b1aff99dde",
            "arn": "arn:aws:ec2:sa-east-1:891377135193:instance/i-0318fd72968cb63d0",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gro-instance-profile01",
            "id": "i-0318fd72968cb63d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00fbd173cb15df862"
              }
            ],
            "primary_network_interface_id": "eni-00fbd173cb15df862",
            "private_dns": "ip-10-55-101-22.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.55.101.22",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb9c9751c2862b9f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb6a75cfb11186fb",
            "tags": {
              "Name": "gro-ec201-private"
            },
            "tags_all": {
              "Name": "gro-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db0115d3946dff88"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-0318fd72968cb63d0",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.gru_instance_profile01",
            "aws_iam_role.gru_ec2_role01",
            "aws_security_group.gru_ec2_sg01",
            "aws_subnet.gru_private_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gru_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:internet-gateway/igw-054ebbe58fdcd52c3",
            "id": "igw-054ebbe58fdcd52c3",
            "owner_id": "891377135193",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-igw01"
            },
            "tags_all": {
              "Name": "gro-igw01"
            },
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gru_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "gro-alb-logs-lh-891377135193",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:loadbalancer/app/gro-alb01/a79946ce37911b3a",
            "arn_suffix": "app/gro-alb01/a79946ce37911b3a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "gro-alb01-814308088.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:loadbalancer/app/gro-alb01/a79946ce37911b3a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gro-alb01",
            "preserve_host_header": false,
            "region": "sa-east-1",
            "security_groups": [
              "sg-0a0dd1a1466abd89a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024f7d8f1f563b93b"
              },
              {
                "subnet_id": "subnet-02bc0af467878679d"
              }
            ],
            "subnets": [
              "subnet-024f7d8f1f563b93b",
              "subnet-02bc0af467878679d"
            ],
            "tags": {
              "Name": "gro-alb01"
            },
            "tags_all": {
              "Name": "gro-alb01"
            },
            "vpc_id": "vpc-0df2da2929960c7e0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:loadbalancer/app/gro-alb01/a79946ce37911b3a"
          },
          "dependencies": [
            "aws_s3_bucket.gru_alb_logs_bucket01",
            "aws_security_group.gru_alb_sg01",
            "aws_subnet.gru_public_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gru_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:targetgroup/gro-tg01/cdc4b85c518d4fd4",
            "arn_suffix": "targetgroup/gro-tg01/cdc4b85c518d4fd4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:targetgroup/gro-tg01/cdc4b85c518d4fd4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gro-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "sa-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "gro-tg01"
            },
            "tags_all": {
              "Name": "gro-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:targetgroup/gro-tg01/cdc4b85c518d4fd4"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gru_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:targetgroup/gro-tg01/cdc4b85c518d4fd4-20260127181446599100000008",
            "port": 80,
            "region": "sa-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:891377135193:targetgroup/gro-tg01/cdc4b85c518d4fd4",
            "target_id": "i-0318fd72968cb63d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.gru_instance_profile01",
            "aws_iam_role.gru_ec2_role01",
            "aws_instance.gru_ec201_private_bonus",
            "aws_lb_target_group.gru_tg01",
            "aws_security_group.gru_ec2_sg01",
            "aws_subnet.gru_private_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gru_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b1aad41eb71762f",
            "association_id": "eipassoc-0798792e3c9f73a71",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04004298b624ef4ce",
            "network_interface_id": "eni-006b0c1d3c05b725d",
            "private_ip": "10.55.1.205",
            "public_ip": "18.229.97.70",
            "region": "sa-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02bc0af467878679d",
            "tags": {
              "Name": "gro-nat01"
            },
            "tags_all": {
              "Name": "gro-nat01"
            },
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.gru_nat_eip01",
            "aws_internet_gateway.gru_igw01",
            "aws_subnet.gru_public_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gru_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c93d707d9f5fb771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04004298b624ef4ce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-02c93d707d9f5fb77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-02c93d707d9f5fb77"
          },
          "dependencies": [
            "aws_eip.gru_nat_eip01",
            "aws_internet_gateway.gru_igw01",
            "aws_nat_gateway.gru_nat01",
            "aws_route_table.gru_private_rt01",
            "aws_subnet.gru_public_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gru_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054ebbe58fdcd52c3",
            "id": "r-rtb-038f6941ae94b37791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-038f6941ae94b3779",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-038f6941ae94b3779"
          },
          "dependencies": [
            "aws_internet_gateway.gru_igw01",
            "aws_route_table.gru_public_rt01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gru_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:route-table/rtb-02c93d707d9f5fb77",
            "id": "rtb-02c93d707d9f5fb77",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [],
            "tags": {
              "Name": "gro-private-rt01"
            },
            "tags_all": {
              "Name": "gro-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-02c93d707d9f5fb77",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gru_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:route-table/rtb-038f6941ae94b3779",
            "id": "rtb-038f6941ae94b3779",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [],
            "tags": {
              "Name": "gro-public-rt01"
            },
            "tags_all": {
              "Name": "gro-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-038f6941ae94b3779",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gru_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb118be0f48adede",
            "region": "sa-east-1",
            "route_table_id": "rtb-02c93d707d9f5fb77",
            "subnet_id": "subnet-0bb6a75cfb11186fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.gru_private_rt01",
            "aws_subnet.gru_private_subnets",
            "aws_vpc.gru_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01802733e609a1b27",
            "region": "sa-east-1",
            "route_table_id": "rtb-02c93d707d9f5fb77",
            "subnet_id": "subnet-09ee0748f45cb1390"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.gru_private_rt01",
            "aws_subnet.gru_private_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gru_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c4a5280fe65d7b5",
            "region": "sa-east-1",
            "route_table_id": "rtb-038f6941ae94b3779",
            "subnet_id": "subnet-02bc0af467878679d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.gru_public_rt01",
            "aws_subnet.gru_public_subnets",
            "aws_vpc.gru_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043088b0dd473c9fc",
            "region": "sa-east-1",
            "route_table_id": "rtb-038f6941ae94b3779",
            "subnet_id": "subnet-024f7d8f1f563b93b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.gru_public_rt01",
            "aws_subnet.gru_public_subnets",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gru_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group/sg-0a0dd1a1466abd89a",
            "description": "ALB security group",
            "egress": [],
            "id": "sg-0a0dd1a1466abd89a",
            "ingress": [],
            "name": "gro-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gro-alb-sg01"
            },
            "tags_all": {
              "Name": "gro-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0a0dd1a1466abd89a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gru_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group/sg-0db0115d3946dff88",
            "description": "EC2 app security group",
            "egress": [],
            "id": "sg-0db0115d3946dff88",
            "ingress": [],
            "name": "gro-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gro-ec2-sg01"
            },
            "tags_all": {
              "Name": "gro-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0db0115d3946dff88",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gru_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group/sg-0225efe2165e967fa",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-0225efe2165e967fa",
            "ingress": [],
            "name": "gro-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gro-rds-sg01"
            },
            "tags_all": {
              "Name": "gro-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0225efe2165e967fa",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gru_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group/sg-02967f494f80f9627",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-02967f494f80f9627",
            "ingress": [],
            "name": "gro-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gro-vpce-sg01"
            },
            "tags_all": {
              "Name": "gro-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-02967f494f80f9627",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shinjuku_rds_ingress_from_liberdade01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.55.0.0/16"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1715109141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-0225efe2165e967fa",
            "security_group_rule_id": "sgr-01956171d0349ad5a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gru_rds_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gru_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:subnet/subnet-0bb6a75cfb11186fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.55.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb6a75cfb11186fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-private-subnet-1"
            },
            "tags_all": {
              "Name": "gro-private-subnet-1"
            },
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0bb6a75cfb11186fb",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:subnet/subnet-09ee0748f45cb1390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.55.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee0748f45cb1390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-private-subnet-2"
            },
            "tags_all": {
              "Name": "gro-private-subnet-2"
            },
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-09ee0748f45cb1390",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gru_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:subnet/subnet-02bc0af467878679d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.55.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bc0af467878679d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-public-subnet-1"
            },
            "tags_all": {
              "Name": "gro-public-subnet-1"
            },
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-02bc0af467878679d",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:subnet/subnet-024f7d8f1f563b93b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.55.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024f7d8f1f563b93b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-public-subnet-2"
            },
            "tags_all": {
              "Name": "gro-public-subnet-2"
            },
            "vpc_id": "vpc-0df2da2929960c7e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-024f7d8f1f563b93b",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gru_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:vpc/vpc-0df2da2929960c7e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.55.0.0/16",
            "default_network_acl_id": "acl-093bae83cebda5ea6",
            "default_route_table_id": "rtb-0034523d602cc0da7",
            "default_security_group_id": "sg-0327731a67eb36237",
            "dhcp_options_id": "dopt-02fafc093fb18aee7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df2da2929960c7e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0034523d602cc0da7",
            "owner_id": "891377135193",
            "region": "sa-east-1",
            "tags": {
              "Name": "gro-vpc01"
            },
            "tags_all": {
              "Name": "gro-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-0df2da2929960c7e0",
            "region": "sa-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-041d5b300990c8efb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-041d5b300990c8efb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0db0115d3946dff88",
            "security_group_rule_id": "sgr-041d5b300990c8efb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-041d5b300990c8efb",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_ec2_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "gru_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-0edef7dc00439ab38",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0edef7dc00439ab38",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0a0dd1a1466abd89a",
            "security_group_rule_id": "sgr-0edef7dc00439ab38",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0edef7dc00439ab38",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_alb_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-0eca879e4cae503a0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0eca879e4cae503a0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0225efe2165e967fa",
            "security_group_rule_id": "sgr-0eca879e4cae503a0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0eca879e4cae503a0",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_rds_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-09b00954860d4be0e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-09b00954860d4be0e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-02967f494f80f9627",
            "security_group_rule_id": "sgr-09b00954860d4be0e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-09b00954860d4be0e",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_vpce_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "gru_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-001c74b21e966a3d8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-001c74b21e966a3d8",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-5da64334",
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0a0dd1a1466abd89a",
            "security_group_rule_id": "sgr-001c74b21e966a3d8",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-001c74b21e966a3d8",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_alb_sg01",
            "aws_vpc.gru_vpc01",
            "data.aws_ec2_managed_prefix_list.gru_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "gru_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-0af069370688a3fd3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0af069370688a3fd3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0a0dd1a1466abd89a",
            "security_group_rule_id": "sgr-0af069370688a3fd3",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0af069370688a3fd3",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_alb_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "gru_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-04c63a601647dbb83",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04c63a601647dbb83",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a0dd1a1466abd89a",
            "region": "sa-east-1",
            "security_group_id": "sg-0db0115d3946dff88",
            "security_group_rule_id": "sgr-04c63a601647dbb83",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-04c63a601647dbb83",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_alb_sg01",
            "aws_security_group.gru_ec2_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "gru_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-0ba9c7a9382cd3c5d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-0ba9c7a9382cd3c5d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db0115d3946dff88",
            "region": "sa-east-1",
            "security_group_id": "sg-0225efe2165e967fa",
            "security_group_rule_id": "sgr-0ba9c7a9382cd3c5d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0ba9c7a9382cd3c5d",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_ec2_sg01",
            "aws_security_group.gru_rds_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "gru_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377135193:security-group-rule/sgr-0fdc2325be6577816",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-0fdc2325be6577816",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db0115d3946dff88",
            "region": "sa-east-1",
            "security_group_id": "sg-02967f494f80f9627",
            "security_group_rule_id": "sgr-0fdc2325be6577816",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0fdc2325be6577816",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.gru_ec2_sg01",
            "aws_security_group.gru_vpce_sg01",
            "aws_vpc.gru_vpc01"
          ]
        }
      ]
    }
  ]
}